<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="Autofill">

	<data>

		<variable
			name="viewModel"
			type="com.aproteam.ioucash.viewmodel.LoginViewModel"/>

	</data>

	<ScrollView
		android:id="@+id/root"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:overScrollMode="never">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="8dp"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/appLogo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:adjustViewBounds="true"
				android:contentDescription="@string/appName"
				android:padding="16dp"
				android:src="@mipmap/ic_launcher"/>

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:error="@{viewModel.errorEmail}"
				app:errorEnabled="true">

				<EditText
					android:id="@+id/usernameEditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/username"
					android:inputType="textEmailAddress"
					android:padding="8dp"
					android:text="@={viewModel.email}"/>

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:error="@{viewModel.errorPassword}"
				app:errorEnabled="true">

				<EditText
					android:id="@+id/passwordEditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/password"
					android:inputType="textPassword"
					android:padding="8dp"
					android:text="@={viewModel.password}"/>

			</com.google.android.material.textfield.TextInputLayout>

			<Button
				android:id="@+id/loginButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:onClick="@{()-> viewModel.onLoginClicked()}"
				android:text="@string/login"/>

			<Button
				android:id="@+id/registerButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:onClick="@{()-> viewModel.onRegisterClicked()}"
				android:text="@string/register"/>

			<ProgressBar
				android:id="@+id/progressBar"
				style="?android:attr/progressBarStyleLarge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="8dp"
				android:visibility="@{viewModel.busy}"/>

		</LinearLayout>

	</ScrollView>

</layout>
